# RobotSwarms

./: README.md
swarmRobot/: CMakeLists.txt  Statistics_localRange4.00_speed0.10_angle45.00_toFlock0.05.txt  package.xml
swarmRobot/msg/: Mission.msg  MissionFinished.msg  MissionNew.msg  RobotIndex.msg  UpdateShape.msg
swarmRobot/src/: TEST.cpp  simulation.launch  statist.launch
swarmRobot/src/basics/: Angle.h  BasicStructs.h  MyAlgorithms.h  Position.h  Range.h  ToString.h
swarmRobot/src/logger/: Logger.h  Time.h
swarmRobot/src/msgs/: Mission.h  MissionFinished.h  MissionNew.h  RobotIndex.h  UpdateShape.h
swarmRobot/src/objects/: Geometry.h  Object.h
swarmRobot/src/robot/flock/: FlockControl.h  Statistics.h
swarmRobot/src/robot/nodes/: FlockRobot.cpp  Leader.cpp  Observer.cpp  Statist.cpp
swarmRobot/src/robot/robot_system/: Robot.h  RobotCore.h  RobotPilot.h
swarmRobot/src/various/: Constants.h  Statistical.h
